# CMake-Study

./: .gitignore  README.md
lesson1/: CMakeLists.txt  hello.cc
lesson10/: CMakeLists.txt
lesson10/app/: CMakeLists.txt  main.cc
lesson10/my_lib/: CMakeLists.txt
lesson10/my_lib/src/: add.cc  divide.cc
lesson11/: CMakeLists.txt  main.cc
lesson12/: CMakeLists.txt
lesson12/proto/: person.proto
lesson2/: CMakeLists.txt  test.cc  test2.cc
lesson3/: CMakeLists.txt  main.cc
lesson4/: CMakeLists.txt
lesson4/my_lib/include/: math.h
lesson4/my_lib/src/: add.cc  sub.cc
lesson5/: CMakeLists.txt
lesson5/app/: CMakeLists.txt  main.cc
lesson5/my_lib/: CMakeLists.txt
lesson5/my_lib/include/: my_math.h
lesson5/my_lib/src/: add.cc  div.cc  multi.cc  sub.cc
lesson6/: CMakeLists.txt
lesson6/app/: CMakeLists.txt  main.cc
lesson6/my_lib/: CMakeLists.txt
lesson6/my_lib/src/: multiply.cc
lesson7/: CMakeLists.txt
lesson7/app/: CMakeLists.txt
lesson7/cmake/: FindMyMath.cmake
lesson7/my_lib/include/: math.h
lesson7/my_lib/src/: sub.cc
lesson8/: CMakeLists.txt
lesson8/app/: CMakeLists.txt  main.cc
lesson9/: CMakeLists.txt
lesson9/my_lib/: CMakeLists.txt
lesson9/my_lib/src/: add.cc  sub.cc
